# voiceverse

./: .dvcignore  .env  .gitignore  docker-compose.yml  pyproject.toml  test_pipeline.py
.dvc/: config
data/telugu_english_samples/: metadata.csv
personas/: telugu_narrator.json
scripts/: episode_001.txt
src/voiceverse/: __init__.py  config.py  cross_import.py  data_utils.py  flow_build.py  persona.py  pipeline.py  quality.py  training.py  tts.py  vocoder.py
